--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,119 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+  font-family: "Poppins", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Missions style */
+
+.table-responsive {
+  display: flex;
+  margin: 1.5rem;
+  border: 1px solid lightgrey;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.theader {
+  border-bottom: 1px solid lightgray;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.body-mis {
+  display: flex;
+  border-bottom: 1px solid lightgray;
+  width: 64.3rem;
+}
+
+.ul {
+  display: grid;
+  grid-template-columns: 9.96rem 60% 7.17rem 20%;
+  border-right: 1px solid lightgrey;
+}
+
+.mi {
+  flex: 1;
+  padding: 1rem;
+}
+
+.de {
+  flex: 2;
+  padding: 1rem;
+  border-left: 1px solid lightgrey;
+}
+
+.st {
+  flex: 3;
+  border-left: 1px solid lightgrey;
+  border-right: 1px solid lightgrey;
+  padding: 1rem;
+}
+
+.description {
+  width: 60%;
+  padding: 1rem 1rem 1rem 1rem;
+  text-align: justify;
+  border-right: 1px solid lightgrey;
+}
+
+.name {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 9.99rem;
+  padding: 1rem;
+  border-right: 1px solid lightgray;
+  font-size: large;
+}
+
+.span {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border-right: 1px solid lightgrey;
+  width: 7.1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 13%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+article {
+  display: flex;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+.body-mis:nth-child(even) {
+  background-color: #eee;
+}
+
+/* Profile style */
+
+.profile {
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+.misssion-joined,
+.rocket-reserved {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+
+.list-group {
+  border: 1px solid lightgray;
+}
+
+.list-group-item {
+  display: flex;
+  padding: 1rem;
+  border-bottom: 1px solid lightgray;
 }
