--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@
   font-size: large;
 }
 
-.span {
+.buttonS {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -82,6 +82,28 @@
   justify-content: center;
   align-items: center;
   width: 13%;
+}
+
+.join {
+  height: 2.3rem;
+  width: 6rem;
+  border: rgb(143, 142, 142) solid 1px;
+  background: transparent;
+}
+
+.join:hover {
+  border: rgb(244, 25, 25) solid 1px;
+  color: rgb(244, 25, 25);
+}
+
+.span {
+  border-radius: 4px;
+  background: gray;
+  border: none;
+}
+
+.span:hover {
+  background: rgb(77, 77, 234);
 }
 
 article {
